@@ -84,8 +84,10 @@ initDefaultClusterOptions <- function(libname)
     rscript <- file.path(R.home("bin"), "Rscript")
     port <- Sys.getenv("R_PARALLEL_PORT")
     port <- if (identical(port, "random")) NA else as.integer(port)
-    if (is.na(port))
-        port <- 11000 + 1000 * ((stats::runif(1L) + unclass(Sys.time())/300) %% 1)
+    if (is.na(port)) {
+        ran1 <- sample.int(.Machine$integer.max - 1L, 1L) / .Machine$integer.max
+        port <- 11000 + 1000 * ((ran1 + unclass(Sys.time()) / 300) %% 1)
+    }
     Sys.i <- Sys.info()
     options <- list(port = as.integer(port),
                     timeout = 60 * 60 * 24 * 30, # 30 days
